corrigido o menu, definido wrap
22/11/24 13h23

--- a/estudantes.html
+++ b/estudantes.html
@@ -18,8 +18,8 @@
 <body>
     <h1>Estudantes Premiados</h1>
 
-    <main class="main">
-        <div class="espacobaixo">
+    <main class="espacobaixo">
+        <div>
             <p>As escolas contempladas são aquelas que atingiram os índices mínimos de desempenho no BI Alura (0,125) no
                 ano de 2024.
                 Quanto aos estudantes, os CGPs e professores selecionarão até 2 estudantes. Para escolas com EFAF e EM
