--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programa Estrelas da Programação</title>
+    <title>Estrelas da Programação</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -59,7 +59,7 @@
           <div class="main">
             <p>
                 O programa Estrelas da Programação pretende reconhecer os esforços diários realizado por milhares de professores no âmbito do Estado de São Paulo que empenharam em desenvolver o pensamento  computacional com seus estudantes, seja com a programação em blocos Scratch, com a linguagem de marcação HTML, a linguagem de estilização CSS, ou ainda, a linguagem de programação JavaScript.
-                Os professores de Tecnologia da Diretoria de Ensino de Marília, em particular, merecem  todo o reconhecimento haja vista todos os esforços da disseminação do pensamento computacional, no aprendizado nas orientações técnicas, nos ATPCs da EFAPE e no estudo individual de linguagens de programação que, quase sempre, este não tinha experiência e habilidades prévias.  
+                Os professores de Tecnologia da Diretoria de Ensino de Marília, em particular, merecem  todo o reconhecimento haja vista todos os esforços da disseminação do pensamentono aprendizado nas orientações técnicas, nos ATPCs da EFAPE e no estudo individual de linguagens que este, muitas vezes, não tinha experiência e habilidades prévias.  
             </p>
 
 <img src="./img/man.png" alt="">
